--- a/package.json
+++ b/package.json
@@ -27,8 +27,11 @@
   "homepage": "https://github.com/jayther/hackathon-overlay-minigame#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "fs-extra": "^9.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "socket.io": "^3.1.1",
+    "socket.io-client": "^3.1.1",
     "twitch": "^4.4.7",
     "twitch-auth": "^4.4.7",
     "twitch-chat-client": "^4.4.7",
