--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack serve --mode development --open --hot",
-    "build": "webpack --mode production",
+    "build": "webpack --mode development",
+    "build-prod": "webpack --mode production",
     "server": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -18,7 +19,8 @@
     "overlay",
     "game",
     "channel",
-    "points"
+    "points",
+    "hackathon"
   ],
   "author": "jayther",
   "license": "ISC",
