--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "twitch": "^4.4.7",
     "twitch-auth": "^4.4.7",
     "twitch-chat-client": "^4.4.7",
-    "twitch-eventsub": "^4.4.7"
+    "twitch-eventsub": "^4.4.7",
+    "twitch-eventsub-ngrok": "^4.4.9"
   },
   "devDependencies": {
     "@babel/core": "^7.12.13",
