--- a/package.json
+++ b/package.json
@@ -48,10 +48,15 @@
     "@babel/preset-env": "^7.12.13",
     "@babel/preset-react": "^7.12.13",
     "babel-loader": "^8.2.2",
+    "css-loader": "^5.0.2",
     "eslint": "^7.20.0",
     "eslint-plugin-react": "^7.22.0",
     "gulp": "^4.0.2",
     "html-webpack-plugin": "^5.0.0",
+    "mini-css-extract-plugin": "^1.3.7",
+    "sass": "^1.32.7",
+    "sass-loader": "^11.0.1",
+    "style-loader": "^2.0.0",
     "webpack": "^5.20.1",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2"
