--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "homepage": "https://github.com/jayther/hackathon-overlay-minigame#readme",
   "dependencies": {
     "core-js": "^3.8.3",
+    "eventemitter3": "^4.0.7",
     "express": "^4.17.1",
     "fs-extra": "^9.1.0",
     "react": "^17.0.1",
