--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build-debug": "webpack --mode development --config debug.config.js",
     "build-prod": "webpack --mode production",
     "server": "node server.js",
+    "server-debug": "node server-debug.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
