Send chat messages for certain "errors" and battle updates.

--- a/settings.json
+++ b/settings.json
@@ -1,5 +1,7 @@
 {
   "socketPort": 3000,
   "webPort": 8080,
-  "staticDir": "dist"
+  "staticDir": "dist",
+  "channelPointsName": "channel points",
+  "sendChatForDebugEvents": false
 }
