WIP Change character and gender from chat and channel points.
Use globalEmitter and events so we can listen to commands from anywhere.

--- a/settings.json
+++ b/settings.json
@@ -3,5 +3,6 @@
   "webPort": 8080,
   "staticDir": "dist",
   "channelPointsName": "channel points",
-  "sendChatForDebugEvents": false
+  "sendChatForDebugEvents": false,
+  "commandPrefix": "!"
 }
