--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eventemitter3": "^4.0.7",
     "express": "^4.17.1",
     "fs-extra": "^9.1.0",
+    "howler": "^2.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "regenerator-runtime": "^0.13.7",
