--- a/package.json
+++ b/package.json
@@ -31,11 +31,14 @@
   },
   "homepage": "https://github.com/jayther/hackathon-overlay-minigame#readme",
   "dependencies": {
+    "bootstrap": "^4.6.0",
     "core-js": "^3.8.3",
     "eventemitter3": "^4.0.7",
     "express": "^4.17.1",
     "fs-extra": "^9.1.0",
     "howler": "^2.2.1",
+    "jquery": "^3.5.1",
+    "popper.js": "^1.16.1-lts",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "regenerator-runtime": "^0.13.7",
